Bug 408657 - m3u playlist are loaded in reversed order
Summary: m3u playlist are loaded in reversed order
Status: RESOLVED FIXED
Alias: None
Product: juk
Classification: Applications
Component: general (other bugs)
Version First Reported In: 19.04.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Scott Wheeler
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-06-13 18:07 UTC by henno
Modified: 2019-06-23 21:48 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 19.04.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description henno 2019-06-13 18:07:36 UTC
SUMMARY


STEPS TO REPRODUCE
1. import any folder with m3u files in it
2. load one of the imported playlists

OBSERVED RESULT
the whole playlist is shown in reversed order.

EXPECTED RESULT
the playlist should be in the same order as in the file.

SOFTWARE/OS VERSIONS
Linux: Arch
KDE Plasma Version: 5.16
Comment 1 Michael Pyne 2019-06-23 21:48:35 UTC
Git commit 4c921d333a50f90356ce55dae566be4556abb76e by Michael Pyne.
Committed on 23/06/2019 at 21:40.
Pushed by mpyne into branch 'Applications/19.04'.

m3u: Add M3U tracks to playlist in the order provided in the file.

Turns out the return value of createItem was useful, who knew?
FIXED-IN:19.04.3

M  +3    -1    playlist.cpp

https://invent.kde.org/kde/juk/commit/4c921d333a50f90356ce55dae566be4556abb76e