m3u: Add M3U tracks to playlist in the order provided in the file.

Turns out the return value of createItem was useful, who knew?

BUG:408657
FIXED-IN:19.04.3